cleaned up the CSS and added an container

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Parts Compare</h1>
-    <div class="compare" id="compare">
-      <!-- This will be where the part numbers are added -->
-      <input type="text" id="part1" placeholder="Enter Part #1" />
-      <input type="text" id="part2" placeholder="Enter Part #2" />
-      <input type="text" id="part3" placeholder="Enter Part #3" />
-      <input type="text" id="part4" placeholder="Enter Part #4" />
-      <button class="compareButton">Compare</button>
-    </div>
+    <div class="container">
+      <h1>Parts Compare</h1>
+      <div class="compare" id="compare">
+        <input type="text" id="part1" placeholder="Enter Part #1" />
+        <input type="text" id="part2" placeholder="Enter Part #2" />
+        <input type="text" id="part3" placeholder="Enter Part #3" />
+        <input type="text" id="part4" placeholder="Enter Part #4" />
+        <button class="compareButton">Compare</button>
+      </div>
 
-    <table id="comparisonTable">
-      <thead>
-        <tr id="tableHeader"></tr>
-      </thead>
-      <tbody id="tableBody"></tbody>
-    </table>
+      <table id="comparisonTable">
+        <thead>
+          <tr id="tableHeader"></tr>
+        </thead>
+        <tbody id="tableBody"></tbody>
+      </table>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
